# deer-face-embed

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
config/: augmentation_sweep.yaml  base_model_sweep.yaml  default.yaml  face_chip_sweep.yaml  freeze_sweep.yaml
config/augmentation/: aggressive.yaml  baseline.yaml  conservative.yaml  conservative_no_erasing.yaml  none.yaml  slightly.yaml
config/freeze/: early_layers.yaml  g3_from_start.yaml  g3_then_g2.yaml  head_only.yaml  progressive_g2.yaml  progressive_g3.yaml
config/job/: training.yaml
docs/: custom_dataset.md
mlflow/: docker-compose.yaml
scripts/: create_face_chips.py
src/deer_face_embed/: __init__.py  main.py
src/deer_face_embed/core/: DeerFaceDataset.py  augmentation.py  splitter.py  trainer.py
src/deer_face_embed/core/evaluation/: evaluator.py
src/deer_face_embed/core/models/: CNNBasedModels.py  VitBasedModels.py  __init__.py  base.py
src/deer_face_embed/io/: data.py  services.py  wildlife_dataset.py
src/deer_face_embed/jobs/: __init__.py  base.py  train.py
test/: conftest.py  test_augmentation.py  test_config_validation.py  test_dataset.py  test_evaluator.py  test_models.py  test_splitter.py
